Fix #131: Hide the printable version link
Instead of removing the link via editing the sidebar, just hides it via
css.  The sidebar edit proved too much of a hassle, in that it didn't
actually work correctly.

Issue #131: Remove 'Printable version' tool from all Torque wikis

--- a/roles/mediawiki/files/Common.css
+++ b/roles/mediawiki/files/Common.css
@@ -60,6 +60,14 @@ body {
 #p-View {
   display:block;
 }
+
+/* Hides the "Printable version" tool.
+ * See https://github.com/OpenTechStrategies/torque-sites/issues/131
+ */
+#t-print {
+display:none;
+}
+
 @media print {
   .firstHeading {
     display:none;
